packages/reference/client/scss/60_components/_c-nav.scss
.c-nav {
  border: none;
  text-align: center;

  @include breakpoint(desktop) {
    width: auto;
    text-align: left;
  }

  &__checkbox {
    display: none;
  }

  &__menu {
    height: 100%;
    overflow-y: scroll;
    border-right: 1px solid $border-default;
    background-color: white;
    overflow: auto;
    position: fixed;
    right: 100%;
    transition: right 0.25s;
    z-index: $nav-z-index;
    top: 0;
    bottom: 0;
    width: 100%;
    -webkit-overflow-scrolling: touch;

    @include breakpoint(desktop) {
      overflow-y: visible;
      overflow: hidden;
      transition: none;
      border-right: none;
      position: static;
    }

    &-button {
      flex-basis: 33.3%;
      flex-grow: 1;
      cursor: pointer;
      margin: auto;

      @include breakpoint(desktop) {
        display: none;
      }

      p {
        text-decoration: none;
        font-size: 0.8em;
        display: inline-block;
        padding-left: $global-spacing-unit-small;
      }

      &-image {
        display: inline-block;

        img {
          height: 24px;
          width: 24px;
        }
      }
    }

    &-list {
      font-size: 1.25em;
      padding-top: $global-baseline * 10;

      @include breakpoint(desktop) {
        font-size: 1rem;
        display: flex;
        justify-content: space-between;
      }
    }

    &-header {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      position: fixed;
      width: 100%;
      top: 0;
      background-color: white;

      &-logo {
        margin: $global-spacing-unit-small;
        padding-left: $global-spacing-unit-small;
        flex-grow: 1;

        @include breakpoint(desktop) {
          display: none;
        }
      }

      &-cross {
        background: url('/static/cross.svg') no-repeat center;
        height: 4rem;
        width: 4rem;
        background-color: black;

        @include breakpoint(desktop) {
          display: none;
        }
      }

      &-search {
        text-align: left;
        flex-basis: 100%;
        background-color: $background-light-grey;

        @include breakpoint(desktop) {
          display: none;
        }
      }
    }
  }

  &__checkbox:checked~.c-nav__menu {
    right: 0;
  }

  &__option {
    background-color: $background-light-grey;
    padding-left: $global-spacing-unit;
    padding-top: $global-spacing-unit;
    text-align: left;
    width: 100%;
    display: block;
    font-weight: 700;
    border-top: 1px solid $border-default;
    height: 6em;

    @include breakpoint(desktop) {
      padding: 0 $global-spacing-unit-small;
      border-top: none;
      font-weight: normal;
      background-color: white;
      border-left: 1px solid $border-default;
      height: auto;
      text-align: center;
    }

    &:first-of-type {
      @include breakpoint(desktop) {
        border-left: none;
      }
    }

    &-label {
      @include breakpoint(desktop) {
        padding: $global-spacing-unit-tiny 0;
        white-space: nowrap;
        position: relative;
      }
      &::after {
        @include breakpoint(desktop) {
          content: '';
          display: block;
          width: 0;
          margin: auto;
          height: 3px;
          background: $alert-orange;
          transition: width 0.2s;
          position: absolute;
          bottom: 0;
          left: 50%;
          transform:translateX(-50%);
        }
      }
      &:hover::after {
        @include breakpoint(desktop) {
          width: 100%;
        }
      }
    }

    &-text {
      font-size: 0.6em;
      font-weight: 500;
      margin-top: $global-spacing-unit-small;

      @include breakpoint(desktop) {
        display: none;
      }
    }
  }

  &__error {
    text-align: center;
  }
}

